# konjue

./: AUTHORS  ChangeLog  Doxyfile  Makefile.am  Makefile.in  README  configure  configure.in  configure.in.in  konjue.kdevelop  konjue.kdevelop.pcs  konjue.kdevses
admin/CVS/: Entries
doc/: Makefile.am  Makefile.in
doc/en/: Makefile.am  Makefile.in  index.docbook
po/: Makefile.in  de.gmo  de.po  konjue.pot  nl.gmo  nl.po
src/: Makefile.am  Makefile.in  conjugator.cpp  conjugator.h  konjue.cpp  konjue.desktop  konjue.h  konjue.lsm  konjue_client.cpp  konjueiface.h  konjueiface_skel.cpp  konjueui.rc  konjueview.cpp  konjueview.h  main.cpp  pref.cpp  pref.h  searchtoolbar.cpp  searchtoolbar.h
